# advent-of-code

./: .gitignore  Makefile  README.md  pyproject.toml
2019/: requirements.txt  setup.py
2019/aoc/: errors.py
2019/aoc/data/: __init__.py
2019/aoc/models/: __init__.py
2019/models/: get_aoc_2019_answers.py
2021/: day_01.ipynb  day_04.ipynb  day_05.ipynb  requirements.txt
notebooks/2019/: day_1.ipynb  day_2.ipynb  day_3.ipynb  day_4.ipynb  day_5.ipynb  day_6.ipynb  day_7.ipynb  day_9.ipynb
notebooks/2021/: day_02.ipynb  day_03.ipynb
notebooks/2023/: day_1.ipynb  day_2.ipynb  day_3.ipynb  day_4.ipynb  day_5.ipynb  day_6.ipynb  day_7.ipynb  day_8.ipynb  day_9.ipynb
src/advent_of_code/: __init__.py
