[tool.poetry]
name = "advent-of-code"
version = "0.1.0"
description = ""
authors = ["mwtmurphy <hi@mwtmurphy.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.*"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.27.1"
numpy = "^1.26.2"
networkx = "^3.2.1"
tqdm = "^4.66.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
